--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
 
     defaultConfig {
         applicationId "sv.edu.ues.fia.eisi.mialojamientosv"
-        minSdk 21
+        minSdk 23
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -57,6 +57,12 @@ dependencies {
 
     /* SURGAR ORM */
     implementation 'com.github.satyan:sugar:1.3'
+
+    /* MAPAS */
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
+    /*Geolocalizacion*/
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 
     /* FIN LIBRERIAS */
 
