--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -64,6 +65,10 @@ dependencies {
     /*Geolocalizacion*/
     implementation 'com.google.android.gms:play-services-location:17.0.0'
 
+    /*VOLLEY*/
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.google.firebase:firebase-database:20.0.5'
+    implementation 'com.google.firebase:firebase-messaging:23.0.5'
     /* FIN LIBRERIAS */
 
     testImplementation 'junit:junit:4.13.2'
