--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.MiAlojamientoSV"
+        android:usesCleartextTraffic="true"
         tools:replace="android:icon"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.view.HotelActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.view.PerfilActivity"
             android:exported="false" />
@@ -35,7 +38,7 @@
 
         <meta-data
             android:name="DATABASE"
-            android:value="mialojamientosv.db" />
+            android:value="mialojamientosv.s3db" />
         <meta-data
             android:name="VERSION"
             android:value="1" />
@@ -44,7 +47,7 @@
             android:value="true" />
         <meta-data
             android:name="DOMAIN_PACKAGE_NAME"
-            android:value="sv.edu.ues.fia.eisi.mialojamiento.sv" />
+            android:value="sv.edu.ues.fia.eisi.mialojamientosv" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCi5uoSjvHU8jxRAfRgvH7WcbWr-gylDV8" />
@@ -61,9 +64,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".FCM" android:exported="false">
+
+        <service
+            android:name=".FCM"
+            android:exported="false">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
     </application>
