--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,12 @@
         tools:replace="android:icon"
         tools:targetApi="31">
         <activity
+            android:name=".favoritoDetalleActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.view.HotelActivity"
             android:exported="false" />
-      <activity
+        <activity
             android:name=".homeLogin"
             android:exported="false" />
         <activity
