--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,8 +70,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:20.0.5'
     implementation 'com.google.firebase:firebase-messaging:23.0.5'
 
-    /* FIN LIBRERIAS */
+    //Diseño
+    implementation 'androidx.recyclerview:recyclerview:1.0.0' //Lista
+    implementation 'androidx.cardview:cardview:1.0.0' //Tarjetas
 
+    /* FIN LIBRERIAS */
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
