--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         tools:replace="android:icon"
         tools:targetApi="31">
         <activity
+            android:name=".ui.view.MensajesActivity"
+            android:exported="false" />
+        <activity
             android:name=".favoritoDetalleActivity"
             android:exported="false" />
         <activity
@@ -33,7 +36,7 @@
             android:name=".ui.view.PerfilActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.view.MensajesActivity"
+            android:name=".ui.view.ChatsActivity"
             android:exported="false" />
         <activity
             android:name=".ui.view.FavoritosActivity"
