--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     implementation 'com.stripe:stripe-android:20.2.2'
 
     /* LOTTIE*/
-    implementation 'com.airbnb.android:lottie:2.8.0'
+    implementation 'com.airbnb.android:lottie:3.0.1'//2.8.0
 
     /* picasso */
     implementation 'com.squareup.picasso:picasso:2.71828'
@@ -70,9 +70,16 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:20.0.5'
     implementation 'com.google.firebase:firebase-messaging:23.0.5'
 
+    /*GMS Autenticación*/
+    implementation 'com.google.firebase:firebase-auth:20.0.1'
+    implementation 'com.google.firebase:firebase-storage:19.1.0'
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+
     /* FIN LIBRERIAS */
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+
 }
